fix docker image name

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/nostr-ui:latest
+          tags: ghcr.io/${{ github.repository_owner }}/nostr-frontend:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
