images html page (WIP)

--- a/kubernetes/kustomize/nostr-frontend/base/ingress.yaml
+++ b/kubernetes/kustomize/nostr-frontend/base/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     app: nostr-frontend
 spec:
   rules:
-    - host: nostr-frontend.com # CHANGE ME!
+    - host: ui.nostr.0x50.tech # CHANGE ME!
       http:
         paths:
           - path: /
